RESOLVED FIXED208966
Large single select elements are incorrectly sized
https://bugs.webkit.org/show_bug.cgi?id=208966
Summary Large single select elements are incorrectly sized
Wenson Hsieh
Reported 2020-03-11 18:21:47 PDT
SSIA
Attachments
Patch (7.51 KB, patch)
2020-03-11 18:28 PDT, Wenson Hsieh
no flags
Patch (7.50 KB, patch)
2020-03-11 18:32 PDT, Wenson Hsieh
no flags
Wenson Hsieh
Comment 1 2020-03-11 18:28:55 PDT Comment hidden (obsolete)
Wenson Hsieh
Comment 2 2020-03-11 18:32:31 PDT
WebKit Commit Bot
Comment 3 2020-03-11 19:48:40 PDT
Comment on attachment 393322 [details] Patch Clearing flags on attachment: 393322 Committed r258308: <https://trac.webkit.org/changeset/258308>
WebKit Commit Bot
Comment 4 2020-03-11 19:48:42 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 5 2020-03-11 19:49:17 PDT
Note You need to log in before you can comment on or make changes to this bug.