Large single select elements are incorrectly sized https://bugs.webkit.org/show_bug.cgi?id=208966

Reviewed by Tim Horton.

Adjusts several size and margin values for menu lists (i.e. the default appearance of non-multiple select
elements) to reflect recent changes in macOS. Additionally, adds a workaround for <rdar://problem/60350699>,
which causes text inside many form controls (including select buttons) to be incorrectly sized.

* platform/mac/ThemeMac.h:
* platform/mac/ThemeMac.mm:
(WebCore::ThemeMac::systemFontSizeFor):
(WebCore::ThemeMac::controlFont const):
* rendering/RenderThemeMac.mm:

Replace calls to +[NSFont systemFontSizeForControlSize:] with `ThemeMac::systemFontSizeFor(NSControlSize size)`
in order to work around <rdar://problem/60350699>.

(WebCore::RenderThemeMac::updateCachedSystemFontDescription const):
(WebCore::RenderThemeMac::setFontFromControlSize const):
(WebCore::RenderThemeMac::controlSizeForSystemFont const):
(WebCore::RenderThemeMac::popupButtonMargins const):
(WebCore::menuListButtonSizes):


Canonical link: https://commits.webkit.org/221878@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@258308 268f45cc-cd09-0410-ab3c-d52691b4dbfc