Source/WebCore/platform/mac/ThemeMac.h
@@ -36,6 +36,8 @@ public:
 #if HAVE(LARGE_CONTROL_SIZE)
     static bool supportsLargeFormControls();
 #endif
+    static double systemFontSizeFor(NSControlSize);
+
     static NSView *ensuredView(ScrollView*, const ControlStates&, bool useUnparentedView = false);
     static void setFocusRingClipRect(const FloatRect&);
     static bool drawCellOrFocusRingWithViewIntoContext(NSCell *, GraphicsContext&, const FloatRect&, NSView *, bool drawButtonCell, bool drawFocusRing, bool useImageBuffer, float deviceScaleFactor);
